# publications-api

./: .env.sample  .gitignore  Dockerfile  README.md  compile_messages.sh  docker-compose.yml  docker-services.yml  pyproject.toml  setup.sh
.github/workflows/: codeql-analysis.yml  main.yml
docs/: index.md
docs/schemas/: index.md  publication-article-v1.0.0.html  publication-dataset-v1.0.0.html
docs/taxonomies/: index.md
example/: README.md  load_data.py
example/data/: 2541655.json  3271369.json  3543040.json  3962711.json  4072206.json
example/data/2541655_files/: seed_at_center.zip.data
example/data/3271369_files/: Data.zip.data  _Setup1.JPG.data  _Setup2.JPG.data
example/data/3543040_files/: colouration_experiment_WFS_in_room.zip.data
example/data/3962711_files/: iGluSnFR_revised.pxp.data  iGluSnFr-GTC-Data.zip.data
example/data/4072206_files/: ReadMe.txt.data  female_measurements.csv.data  females_recaught_vs_non_recaught.csv.data  nestling_measurements.csv.data
publications/: cli.py  config.py  ext.py  handlers.py  images.py  indexer.py  invenio_hacks.py  links.py  mappings.py  marshmallow.py  permissions.py  providers.py  search.py
publications/alembic/: 03965caf4a05_create_publications_branch.py  1cd334b61e1a_create_unique_index_on_pid_values.py  1e21dab3f9fe_create_unique_index_on_pid_values.py  d032a0c033ad_create_publications_branch.py
publications/articles/: config.py  constants.py  ext.py  fetchers.py  marshmallow.py  minters.py  permissions.py  record.py  search.py
publications/articles/jsonschemas/: __init__.py
publications/articles/jsonschemas/articles/: publication-article-v1.0.0.json
publications/articles/jsonschemas/publications/: publication-article-v1.0.0.json
publications/articles/mappings/v7/: __init__.py
publications/articles/mappings/v7/articles/: publication-article-v1.0.0.json
publications/datasets/: config.py  constants.py  ext.py  fetchers.py  marshmallow.py  minters.py  permissions.py  record.py  search.py  serializer.py
publications/datasets/included_mappings/v7/: publication-dataset-v1.0.0.json
publications/datasets/jsonschemas/: __init__.py
publications/datasets/jsonschemas/datasets/: publication-dataset-v1.0.0.json
publications/datasets/jsonschemas/publications/: publication-dataset-v1.0.0.json  publications-dataset-v1.0.0.json
publications/datasets/mappings/: __init__.py
publications/datasets/mappings/v7/datasets/: publication-dataset-v1.0.0.json
publications/translations/: messages.pot
publications/translations/cs/LC_MESSAGES/: messages.po
publications/translations/en/LC_MESSAGES/: messages.po
scripts/: clear.py  run.sh  setup.sh
