[tool.poetry]
name = "publications-api"
version = "0.0.1"
description = "CESNET repository for scientific publications and datasets"
authors = [
    "Miroslav Bauer <bauer@cesnet.cz>"
]
packages = [
    { include = "publications" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
wheel = "^0.35.1"

oarepo = ">=3.3.0.4"
oarepo-micro-api = ">=1.0.0"

oarepo-validate = ">=1.0.0"
#oarepo-references = ">=1.8.3"
oarepo-mapping-includes = ">=1.2.0"
oarepo-invenio-model = ">=2.1.2"
oarepo-rdm-records = { version = ">=2.1.0", allow-prereleases = true }
oarepo-s3 = { version = ">=1.0.1", allow-prereleases = true }
flask-taxonomies = { version = ">=7.0.0a17", allow-prereleases = true }
#oarepo-taxonomies = { version = ">=2.3.0", allow-prereleases = true }
oarepo-records-draft = { version = ">=5.0.0-alpha.18", allow-prereleases = true }
invenio-records-files = ">=1.2.1"
oarepo-iiif = ">=1.1.1"
oarepo-ui = ">=1.0.2"

[tool.poetry.plugins.oarepo_mapping_handlers]
titled-term = "publications.mappings:titled_term"

[tool.poetry.plugins."invenio_config.module"]
publications = "publications.config"

[tool.poetry.plugins."invenio_search.mappings"]
datasets = "publications.datasets.mappings"
articles = "publications.articles.mappings"

[tool.poetry.plugins."invenio_base.apps"]
publications-dataset = "publications.datasets.ext:PublicationsDatasets"
publications-article = "publications.articles.ext:PublicationsArticles"

[tool.poetry.plugins."invenio_base.api_apps"]
publications-dataset = "publications.datasets.ext:PublicationsDatasets"
publications-article = "publications.articles.ext:PublicationsArticles"
invenio_i18n = "invenio_i18n:InvenioI18N"

[tool.poetry.plugins."flask.commands"]
dataset-records = "publications.cli:dataset_records"

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
publications-dataset = "publications.datasets.jsonschemas"
publications-article = "publications.articles.jsonschemas"

[tool.poetry.plugins."invenio_pidstore.minters"]
publications-dataset = "publications.datasets.minters:dataset_minter"
publications-article = "publications.articles.minters:article_minter"
all-publications-datasets = "publications.datasets.minters:dataset_all_minter"
all-publications-articles = "publications.articles.minters:article_all_minter"

[tool.poetry.plugins."invenio_pidstore.fetchers"]
publications-dataset = "publications.datasets.fetchers:dataset_fetcher"
publications-article = "publications.articles.fetchers:article_fetcher"
all-publications-datasets = "publications.datasets.fetchers:dataset_all_fetcher"
all-publications-articles = "publications.articles.minters:article_all_minter"

[tool.poetry.plugins."oarepo_iiif.openers"]
image-opener = "publications.images:opener"

[tool.poetry.plugins."oarepo_iiif.checks"]
image-checker = "publications.images:checker"

[tool.poetry.plugins."oarepo_iiif.identifier_makers"]
image-checker = "publications.images:identifier_maker"

# TODO: mapping includes
#[tool.poetry.plugins."oarepo_mapping_includes"]
#publications-articles = "publications.articles.included_mappings"

[tool.poetry.plugins."invenio_i18n.translations"]
publications = "publications"

[tool.poetry.dev-dependencies]
wheel = "^0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
